<resources>
    <string name="app_name">Scrum</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_friend">My friends List</string>
    <string name="name">Name</string>

    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>

    <string name="job">Job</string>
    <string name="ok">Add</string>
    <string name="cancel">Cancel</string>
    <string name="gender">Role:</string>

</resources>
